package exception;

public class InvalidDancerException extends Exception {
    public InvalidDancerException(String message) {
        super(message);
    }
} 